# Django-async

./: pyproject.toml
hello_async/hello_async/: settings.py  urls.py  views.py
