[tool.poetry]
name = "django-async"
version = "0.1.0"
description = ""
authors = ["VitaliiFedin <vitalii.fedinn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
uvicorn = "^0.18.2"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
